# leanstral-solana-skill

./: .gitignore  .gitmodules  Cargo.toml  README.md  SKILL.md  claude.md  install.sh  package.json
crates/anchor-ir/: Cargo.toml
crates/anchor-ir/src/: analyzer.rs  ir.rs  lib.rs
crates/leanstral/: Cargo.toml
crates/leanstral/lean_support/: README.md  lake-manifest.json
crates/leanstral/lean_support/Leanstral/: Solana.lean
crates/leanstral/lean_support/Leanstral/Solana/: Account.lean  Token.lean
crates/leanstral/src/: api.rs  consolidate.rs  ir.rs  main.rs  project.rs  proof_plan.rs  validate.rs  workflow.rs
crates/leanstral/src/analyzer/: analyze.rs  mod.rs
crates/leanstral/src/prompt/: builder.rs  mod.rs  templates.rs
crates/leanstral/templates/: PROMPT_TEMPLATE.md  lakefile.lean
docs/: V1_SCOPE.md  index.html  style.css
example/escrow/formal_verification/: .gitignore  EscrowProofs.lean  README.md  SPEC.md
example/escrow/lean_proofs/: Best.lean  lakefile.lean
example/escrow/lean_proofs/attempts/: completion_0.lean  completion_0_raw.txt  completion_1_raw.txt  completion_2.lean  completion_2_raw.txt  completion_3.lean  completion_3_raw.txt
example/escrow/lean_proofs/cancel_access_control/: Main.lean  metadata.json  prompt.txt
example/escrow/lean_proofs/cancel_conservation/: prompt.txt
lean_support/Leanstral/Solana/: State.lean  Token.lean
scripts/: call_leanstral.ts  verify_solana.ts
scripts/templates/: .gitignore  README.lean.md
tools/anchor-ir/: Cargo.toml
tools/anchor-ir/src/: analyzer.rs  ir.rs  lib.rs  main.rs
(+46 files in other folders)
