[package]
name = "leanstral-solana-skill"
version = "1.0.0"
edition = "2021"
authors = ["abishekk92"]
description = "CLI tool for generating formal Lean 4 proofs for Solana programs using Mistral's Leanstral model"
license = "MIT"
repository = "https://github.com/abishekk92/leanstral-solana-skill"

[[bin]]
name = "leanstral"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
regex = "1"
